Added search bar and button to left side of page and put bootstrap grid structure into html file.

--- a/index.html
+++ b/index.html
@@ -15,7 +15,23 @@
           <span class="navbar-brand mb-0 h1 mx-auto">Weather Dashboard</span>
         </div>
     </nav>
-
+    <br>
+    <div class="container">
+        <div class="row">
+          <div class="col-md-4">
+            <form>
+                <div class="form-group">
+                    <label for="floatingTextarea">Search for a City:</label>
+                    <input type="text" id="search-city" class="form-control" name="floatingTextarea"></input>
+                    <button class="searchBtn"><i class="fas fa-search"></i></button>
+                </div>
+            </form>
+          </div>
+          <div class="col-md-8">
+            This is column #2!
+          </div>
+        </div>
+      </div>
 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
