--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <div class="form-group">
                         <label class="search-label" for="floatingTextarea"><h2>Search for a City:</h2></label>
                         <input type="text" id="search-city" class="form-control" name="floatingTextarea"></input>
-                        <button class="searchBtn btn btn-primary"><i class="fas fa-search"></i></button>
+                        <button id="searchBtn" class="searchBtn btn btn-primary"><i class="fas fa-search"></i></button>
                     </div>
                 </form>
                 <br>
