--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             </div>
             <div id="right-side-col" class="col-md-8">
                 <div class="row">
-                    <div id="city-current-info" class="col-md-12 border"></div>
+                    <div id="city-current-info" class="col-md-12"></div>
                 </div>
                 <div class="row">
                     <div id="city-5-day-forecast" class="col-md-12"></div>
