--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         </div>
     </nav>
     <br>
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
-            <div id="left-side-col" class="col-md-4 bg-light">
+            <div id="left-side-col" class="col-md-3 bg-light">
                 <form>
                     <div class="form-group">
                         <label class="search-label" for="floatingTextarea"><h2>Search for a City:</h2></label>
@@ -31,7 +31,7 @@
                     <ul id="recent-cities-list" class="list-group"></ul>
                 </div>
             </div>
-            <div id="right-side-col" class="col-md-8">
+            <div id="right-side-col" class="col-md-9">
                 <div class="row">
                     <div id="city-current-info" class="col-md-12"></div>
                 </div>
