Added a current location button that will find your current location using geolocation and update weather displayed based on that. Needs loading screen button as this response is very slow.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                             <label class="search-label" for="floatingTextarea"><h2>Search for a City:</h2></label>
                             <input type="text" id="search-city" class="form-control" name="floatingTextarea"></input>
                             <button id="searchBtn" class="searchBtn btn btn-primary"><i class="fas fa-search"></i></button>
+                            <button id="locationBtn" class="locationBtn btn btn-secondary"><i class="fas fa-map-marker-alt"></i> Use Current Location</button>
                         </div>
                     </form>
                     <br>
