Added loading ring for when page is waiting to load.

--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
                     <div class="row">
                         <div id="city-5-day-forecast" class="col-md-12"></div>
                     </div>
+                    <div class="modal"></div>
                 </div>
             </div>
         </div>
+        
     </main>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
