--- a/index.html
+++ b/index.html
@@ -36,12 +36,27 @@
                 <div id="right-side-col" class="col-md-9">
                     <div class="row">
                         <div id="city-current-info" class="col-md-12"></div>
+                        <div class="modal" tabindex="-1" role="dialog">
+                            <div class="modal-dialog" role="document">
+                                <div class="modal-content">
+                                    <div class="modal-header">
+                                        <h5 class="modal-title">UV Index Scale</h5>
+                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                            <span aria-hidden="true">&times;</span>
+                                        </button>
+                                    </div>
+                                    <div class="modal-body">
+                                        <p>Modal body text goes here.</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <br>
                     <div class="row">
                         <div id="city-5-day-forecast" class="col-md-12"></div>
                     </div>
-                    <div class="modal"></div>
+                    <div class="modal-load-circle"></div>
                 </div>
             </div>
         </div>
