Added beginning works of a modal to pop up when highlighting over the colored uv index text. Fixed button lining up next to city search input box.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <form>
                         <div class="form-group">
                             <label class="search-label" for="floatingTextarea"><h2>Search for a City:</h2></label>
-                            <input type="text" id="search-city" class="form-control" name="floatingTextarea"></input>
+                            <input type="text" id="search-city" class="form-control float-left" name="floatingTextarea"></input>
                             <button id="searchBtn" class="searchBtn btn btn-primary"><i class="fas fa-search"></i></button>
                             <button id="locationBtn" class="locationBtn btn btn-secondary"><i class="fas fa-map-marker-alt"></i> Use Current Location</button>
                         </div>
@@ -36,7 +36,7 @@
                 <div id="right-side-col" class="col-md-9">
                     <div class="row">
                         <div id="city-current-info" class="col-md-12"></div>
-                        <div class="modal" tabindex="-1" role="dialog">
+                        <div id="myModal" class="modal" tabindex="-1" role="dialog">
                             <div class="modal-dialog" role="document">
                                 <div class="modal-content">
                                     <div class="modal-header">
